# autogenerator-of-ppt

./: .gitignore  GUIA_GRAFICOS.md  GUIA_RAPIDA_PPTX.md  LICENSE  README.md  README_PPTX.md  fix_emojis.py  generar_todo.sh  generate_pptx.py  generate_slides.py  pyproject.toml  run.bat  run_pptx.bat  temario.yml  template.tex
.github/instructions/: crear_clases_desde_temario.instructions.md
clases/capacitacion-desarrollo-ia/: 00-programa-introduccion.yml  01-teoria-sistemas-algebra-aproximacion-universal.yml  02-llms-procesamiento-lenguaje-natural.yml  03-transformer-sequence-to-sequence-escalamiento.yml  04-ingenieria-prompts-marcos-corporativos.yml  05-rag-embeddings-gestion-contexto.yml  06-orquestadores-rag-agentes-no-code.yml  07-anatomia-agente-mcp.yml  08-ade-hibridos-cli.yml  09-sdd-gentleman-ai.yml  10-documentacion-bases-conocimiento.yml  11-memoria-persistente-mcp.yml  12-ddd-contratos-apis.yml  13-eda-automatizado.yml  14-data-formulator.yml  15-automatizacion-n8n.yml  16-calidad-pruebas-ia.yml  17-gestion-proyectos-ia.yml  18-frontend-openpencil-mcp.yml
clases/probabilidad y estadistica/: 0-introduccion.yml  1-tablas_graficos.yml  2-medidas_posicion.yml  3-reglas_probabilidades.yml  ejemplo-graficos.yml
pdfs/: convertir_latex.bat
slides/: 0-introduccion.tex  1-tablas_graficos.tex  2-medidas_posicion.tex  3-reglas_probabilidades.tex  medidas_posicion.tex  reglas_probabilidades.tex  tablas_graficos.tex
temarios/: Programa Detallado IA para TI.md  Programa-Desarrollo-IA.tex  Temario Detallado IA para TI.yaml  programacion_e_informatica.yml
(+15 files in other folders)
