[project]
name = "probest-slides"
version = "0.1.0"
description = "Generador de diapositivas para Probabilidad y Estadística"
authors = [
    {name = "Erick Merino", email = "erick.merino@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
generate-slides = "generate_slides:main"
generate-pptx = "generate_pptx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
